[gd_scene load_steps=2 format=3 uid="uid://ddrol5kryhbu"]

[ext_resource type="Script" path="res://inventory.gd" id="1_axacy"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_axacy")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ItemList"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Button" type="Button" parent="ItemList/HBoxContainer"]
layout_mode = 2
text = "+ "

[node name="Button2" type="Button" parent="ItemList/HBoxContainer"]
layout_mode = 2
text = "-"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 646.0
offset_top = 397.0
offset_right = 1149.0
offset_bottom = 601.0
autowrap_mode = 1
clip_text = true

[node name="ItemListTrash" type="ItemList" parent="."]
layout_mode = 0
offset_left = 678.0
offset_top = -8.0
offset_right = 1142.0
offset_bottom = 326.0

[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="ItemList/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ItemList/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
